# libtrie

./: .gitignore  LICENSE  Makefile  Makefile.am  README.markdown  Trie.py  compile.c  configure.ac  query.c  test.sh  trie.c  trie.h
python/libtrie/: __init__.py  config.py.in
src/: compile.c  query.c  trie.c  trie.h
tests/integration/: basic-insert-no-compress.sh  custom-delimiter-no-compress.sh  helper.sh  no-data-with-keys.sh  querying-bad-file.sh  random-keys.sh  test.sh  test01.sh  test02.sh  test03.sh  test04.sh  test05.sh  very-long-data-no-compress.sh  very-long-data.sh  very-many-keys-no-compress.sh  very-many-keys.sh
